# discord-emoji

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
discord_emoji/: __init__.py  methods.py  table.py
