[tool.poetry]
name = "discord-emoji"
version = "1.4.1"
description = "Converter between discord emoji and unicode emoji."
authors = ["sevenc-nanashi <sevenc7c@sevenc7c.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "discord_emoji" }]
classifiers = [
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sevenc-nanashi/discord-emoji/issues"
"Source Code" = "https://github.com/sevenc-nanashi/discord-emoji"

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
